Reformat the code